# Pandora_plugin_arnn

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  mypy.ini  pyproject.toml  setup.cfg  setup.py  sonar-project.properties
.github/workflows/: pandora_plugin_arnn_ci.yml  pandora_plugin_libsgm_ci.yml
.gitlab/issue_templates/: Bug.md  Release.md
docs/: Makefile
docs/source/: conf.py  developer_guide.rst  index.rst  installation.rst  usage.rst
pandora_plugin_arnn/: __init__.py  pandora_plugin_arnn.py
pandora_plugin_arnn/ai_tool/: __init__.py  common.py  prediction.py  retrain.py
pandora_plugin_arnn/model/: __init__.py  building_segmentation_model.py
tests/: __init__.py  common.py  conftest.py  test_pandora_plugin_arnn.py
tests/ai_tool/: __init__.py  test_common.py  test_prediction.py  test_retrain.py
tests/conf/: pipeline_arnn_basic.json
tests/inputs/: data_description.md
tests/outputs/: data_description.md  fused_classif.npy
