# Copyright (c) 2022, CNES
#
# This file is part of pandora_plugin_arnn
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

# pandora_plugin_arnn setup configuration file

# package setup main metadata
[metadata]
name = pandora_plugin_arnn
author = CNES
author_email = cars@cnes.fr
url = https://github.com/CNES/pandora_plugin_arnn
description = Pandora plugin for the Automatically Refined Neural Network (ARNN).
long_description = file:README.md
long_description_content_type = text/markdown
license = Apache Software License 2.0
license_files = LICENSE
platform = any
keywords: pandora_plugin_arnn, 3D, DEM, cars, pandora, photogrammetry
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    Intended Audience :: Science/Research
    Environment :: Console
    Topic :: Software Development :: Libraries :: Python Modules
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Natural Language :: English
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8

[options]
python_requires = >=3.8


# Packages dependencies
install_requires =
    importlib           ; python_version>"3.8"
    argparse                      # Python Argument Parser
    argcomplete                   # Autocompletion Argparse
    torch
    torchvision
    segmentation-models-pytorch
    scipy
    xarray

packages = find:
package_dir =
   . = pandora_plugin_arnn

# deploy data from the designed directory into package
[options.package_data]
* =
  *.pt

[options.extras_require]
dev =
    sphinx
    sphinx_rtd_theme
    sphinx_autoapi
    pytest
    pytest-cov
    pylint
    pre-commit
    mypy
    black
    types-setuptools

docs =
    sphinx
    sphinx_rtd_theme
    sphinx_autoapi


# entry points cli scripts
[options.entry_points]
pandora.plugin =
    pandora_plugin_arnn = pandora_plugin_arnn.pandora_plugin_arnn:ARNN


# Specify no universal wheel supported (only Python3)
[bdist_wheel]
universal = false

# Flake8 configuration
[flake8]
exclude = .git, venv, build, dist, tests/test_output, docs
# Add flake8 ignored rules
ignore =
# from black compatibility
extend-ignore = E203, W503
max-complexity = 15
max-line-length = 80
#show-source = true
# errors types are not selected by default, so add them to your selection
select = E,F,W,C,B9,C4,B
